# kinematics

./: README.md  test.jl
baxter/: derivation.ipynb
baxter_from_cpp/src_py/: JRys.py  JRzs.py
franka/: derive.ipynb
franka/test/: CMakeLists.txt  main.cpp
robot_model_baxter/src/: baxter.cpp
sice/: derive.ipynb
sice/done_py/: JRx_dots.py  JRxs.py  JRy_dots.py  JRys.py  Jo_dots.py  Jos.py  htm.py
sice/py/: JRx_dots.py  JRxs.py  JRy_dots.py  JRys.py  Jo_dots.py  Jos.py  htm.py
sice_ex/: derive.ipynb
sice_ex/done_py/: JRxs.py  JRy_dots.py  JRys.py  Jos.py  htm.py
sice_ex/py/: htm.py
sice_to_jl/: CMakeLists.txt  jo_1.h  jo_1_dot.h  jo_2.h  jo_2_dot.c  jo_2_dot.h  jo_3.h  jo_3_dot.c  jrx_0_dot.c  jrx_0_dot.h  jrx_1.c  jrx_2_dot.h  jrx_3_dot.c  jrx_3_dot.h  jrx_ee_dot.c  jry_0.c  jry_0_dot.h  jry_1.c  jry_1_dot.h  jry_2.h  jry_2_dot.h  jry_3.c  jry_3.h  jry_3_dot.c  jry_ee.c  jry_ee.h  jry_ee_dot.h  o.c  o_2.c  o_3.c  o_3.h  o_ee.c  o_ee.h  rx_0.h  rx_1.h  rx_2.h  rx_ee.h  ry_1.h  ry_2.c  ry_3.c  (+1 more)
sice_to_jl/src/: jo_0.c  jo_0.h  jo_0_dot.c  jo_0_dot.h  jo_1.c  jo_1_dot.c  jo_2.c  jo_3.c  jo_3_dot.h  jo_ee.c  jo_ee.h  jo_ee_dot.c  jo_ee_dot.h  jrx_0.c  jrx_0.h  jrx_1.h  jrx_1_dot.c  jrx_1_dot.h  jrx_2.c  jrx_2.h  jrx_2_dot.c  jrx_3.c  jrx_3.h  jrx_ee.c  jrx_ee.h  jrx_ee_dot.h  jry_0.h  jry_0_dot.c  jry_1.h  jry_1_dot.c  jry_2.c  jry_2_dot.c  jry_3_dot.h  jry_ee_dot.c  o_0.c  o_0.h  o_1.c  o_1.h  o_2.h  rx_0.c  (+12 more)
yamanaka/: model.ipynb
yamanaka/done/: JRx_dots.py  JRxs.py  JRy_dots.py  JRys.py  JRz_dots.py  JRzs.py  Jo_dots.py  Jos.py  dynamics.py  htm.py
(+659 files in other folders)
